Fix SVG scaling on Safari

--- a/src/component/styles.module.css
+++ b/src/component/styles.module.css
@@ -23,8 +23,7 @@
 }
 
 .calendar {
-  display: block;
-  width: max-content;
+  display: block; /* SVGs are inline-block by default */
 }
 
 .calendar text {
